--- a/login.html
+++ b/login.html
@@ -1,19 +1,30 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-<head>
+<body>
 <style>
 #Login {
   background-color: lightblue;
   color: black;
-  padding: 40px;
+  padding: 30px;
   text-align: center;
-}
+  }
+
 </style>
-</head>
-<body>
 
+  <h1 id="Login">Sign Up</h1>
+<form action="/action_page.php">
+  <label for="firstname">First name:</label><br>
+  <input type="text" id="firstname" name="firstname"
+  <br><br>
+  <label for="lastname">Last name:</label><br>
+  <input type="text" id="lastname" name="lastname"
+  <br><br>
+  <label for="email">Email:</label><br>
+  <input type="text" id="email" name="email"
+  <br><br>
+  <input type="submit" value="Submit">
+</form>
 
-<h1 id="Login">Login</h1>
+<p>If you click the "Submit" button, the data will be sent to www.about-design.com
 
 </body>
-</html>
